# Homework

Algorythms/: 14th.c  14th.h  15th.c  15th.h  16th.c  16th.h  17th.c  17th.h  CMakeLists.txt  btree.h  f.txt  functions.c  functions.h  g.txt  input.txt  laba3.h  lists.c  lists.h  main.c  output.txt  queue.c  queue.h  randomArray.c  randomArray.h  stack.c  stack.h  structures.c  structures.h  tree.c  tree.h
Algorythms/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Algorythms/nbproject/private/: cpp_standard_headers_indexer.cpp  private.xml
