cmake_minimum_required(VERSION 3.15)
project(Algorythms)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Algorythms
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/cpp_standard_headers_indexer.cpp
        14th.c
        14th.h
        15th.c
        15th.h
        16th.c
        16th.h
        17th.c
        17th.h
        functions.c
        functions.h
        laba3.c
        laba3.h
        lists.c
        lists.h
        main.c
        randomArray.c
        randomArray.h
        structures.c
        structures.h queue.h queue.h queue.c tree.h stack.h stack.c)
